5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1596_2895.log
== TEST (2019-04-02 09:40:38) 
-- CODE:
quantidade_de jogos=x
valor_jogo=y
print(x * y)
-- ERROR:
File "XXXX", line 1
    quantidade_de jogos=x
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:09) 
-- CODE:
n= int(input("quantidade dos jogos:"))
vj=float(input("valor do jogo:"))
frete=float(input("valor do frete"))

print(vj * n + frete)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:52:34) 
-- CODE:
n= int(input("quantidade dos jogos:"))
vj=float(input("valor do jogo:"))
frete=float(input("valor do frete"))

print(vj * n + frete)
-- EXECUTION TIME:
0.158032
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
